--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:proto": "node bin/proto",
     "typesafe-i18n": "typesafe-i18n",
     "test": "mocha --check-leaks -r ts-node/register -r tsconfig-paths/register \"src/test/**/*.spec.ts\"",
-    "Cbuild": "truffle migrate --network ropsten",
-    "Ttest": "truffle test --network ropsten"
+    "Cbuild": "truffle migrate",
+    "Ttest": "truffle test"
   },
   "keywords": [
     "crypto"
@@ -115,6 +115,7 @@
     "concurrently": "^6.2.1",
     "grpc_tools_node_protoc_ts": "^5.3.2",
     "grpc-tools": "^1.11.2",
+    "inspect": "^0.0.2",
     "nodemon": "^2.0.12",
     "shelljs": "^0.8.4",
     "supertest": "^6.2.2",
